--- a/.github/workflows/release-it.yml
+++ b/.github/workflows/release-it.yml
@@ -1,34 +1,40 @@
-name: Release
+name: release-it
 
 on:
   workflow_dispatch:
-  push:
-    tags:
-      - "v*.*.*"
-
-permissions:
-  contents: write
-  packages: write
 
 jobs:
   release:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/create-github-app-token@v2
+        id: app-token
         with:
+          app-id: ${{ secrets.RELEASER_APP_ID }}
+          private-key: ${{ secrets.RELEASER_PRIVATE_KEY }}
+
+      - name: Checkout code
+        uses: actions/checkout@v5
+        with:
+          token: ${{ steps.app-token.outputs.token }}
           fetch-depth: 0
 
-      - name: Set up Go
-        uses: actions/setup-go@v5
-        with:
-          go-version: "1.24"
+      - name: git config
+        run: |
+          git config user.email "blackdark-pusher@users.noreply.github.com"
+          git config user.name "blackdark-pusher[bot]"
 
-      - name: Run GoReleaser
-        uses: goreleaser/goreleaser-action@v5
+      - uses: pnpm/action-setup@v4
         with:
-          distribution: goreleaser
           version: latest
-          args: release --clean
+
+      - uses: actions/setup-node@v4
+        with:
+          node-version: lts/*
+          cache: pnpm
+
+      - run: pnpm install
+
+      - run: pnpm release-it --ci
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
