--- a/charts/openebs-zfs-cleanup-controller/templates/deployment.yaml
+++ b/charts/openebs-zfs-cleanup-controller/templates/deployment.yaml
@@ -39,9 +39,9 @@ spec:
           {{- end }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
-          env:
-            - name: CONFIG_PATH
-              value: /etc/openebs-zfs-cleanup/config.yaml
+          envFrom:
+            - configMapRef:
+                name: {{ include "openebs-zfs-cleanup-controller.fullname" . }}-config
           ports:
             - name: metrics
               containerPort: {{ .Values.config.metricsPort }}
