--- a/deploy/rbac.yaml
+++ b/deploy/rbac.yaml
@@ -2,7 +2,8 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: openebs-zfs-cleanup-controller
-  namespace: openebs
+  # change if required
+  # namespace: default
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
@@ -30,4 +31,5 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: openebs-zfs-cleanup-controller
-    namespace: openebs
+    # change if above changed
+    namespace: default
